# hass-systemair-hvac

./: .gitignore  CHANGELOG.md  README.md  conftest.py  hacs.json  pyproject.toml
.github/workflows/: tests.yaml  validate.yaml
custom_components/systemair/: __init__.py  binary_sensor.py  climate.py  cloud_api.py  config_flow.py  const.py  coordinator.py  diagnostics.py  hacs.json  manifest.json  number.py  select.py  sensor.py  services.yaml  strings.json  switch.py
dev/: README.md  all_known_data_items.json  all_valid_data_items_scan.json  discover_data_items.py  discover_data_items2.py  discover_data_items3.py  export_data_items.json  find_sensor_ids.py  find_sensor_ids2.py  introspect_api.py  introspect_api10.py  introspect_api11.py  introspect_api12.py  introspect_api13.py  introspect_api2.py  introspect_api3.py  introspect_api4.py  introspect_api5.py  introspect_api6.py  introspect_api7.py  introspect_api8.py  introspect_api9.py  mock_server.py  scan_all_ids.py  test_monitoring_query.py  test_monitoring_query2.py  test_monitoring_query3.py  test_monitoring_query4.py  test_monitoring_query5.py  view_home_flat.json  view_service_flat.json  view_service_input_correlated.json  view_service_output_correlated.json
docs/: cloud-api-swagger.yaml
lovelace/: README.md  systemair-card.js  systemair-dashboard.yaml
tests/: conftest.py  test_binary_sensor.py  test_climate.py  test_cloud_api.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_number.py  test_select.py  test_sensor.py  test_switch.py
(+2 files in other folders)
