[project]
name = "systemair-ha"
version = "1.0.0"
description = "Systemair HVAC integration for Home Assistant"
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "aiohttp",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
